fixed glide overflow

--- a/src/assets/scss/components/_glide.scss
+++ b/src/assets/scss/components/_glide.scss
@@ -22,7 +22,8 @@
 
 .glide__bullets {
   transform: translateX(0);
-  left: calc(50% - 25px) !important;
+  left: 0;
+  padding-left: 50%;
   bottom: -20px;
 
   .glide__bullet {
